--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: Hexiang Hu
+title: Zhiwen Shao (邵志文)
 description:
-  en: "This is an academic website for Hexiang Hu to share his experiences, projects, publications and tech/non-tech posts. Hexiang Hu is a Ph.D. student at University of California Los Angeles(UCLA), working with Prof. Fei Sha. His research interests lie in the field of Machine Learning and Computer Vison, particularly in Deep Learning. "
-  cn: "这是胡鹤翔的个人学术主页，用于分享他的个人经历，项目，学术论文，技术相关/不相关的博客。"
+  en: "This is an academic website for Zhiwen Shao to share his experiences, projects, publications and tech/non-tech posts. Zhiwen Shao is now a Ph.D. candidate in the Department of Computer Science and Engineering, Shanghai Jiao Tong University, China, advised by Prof. Lizhuang Ma. His research interests lie in the field of Face Analysis and Deep Learning, particularly in Face Alignment and Facial Expression Recognition. "
+  cn: "这是邵志文的个人学术主页，用于分享他的个人经历，项目，学术论文，技术相关/不相关的博客。"
 keywords:
-  en: "Hexiang Hu,Publications,Posts,Research,Deep Learning,Computer Vision,Natural Language Processing"
-  cn: "胡鹤翔,学术论文,博客,研究,深度学习,计算机视觉,自然语言处理"
+  en: "Zhiwen Shao,Publications,Posts,Research,Face Analysis,Deep Learning,Face Alignment, Facial Expression Recognition"
+  cn: "邵志文,学术论文,博客,研究,人脸分析,深度学习,人脸配准,人脸表情识别"
 background: /images/background/background-cube.jpg
 deep_background: /images/background/background-deepcube-2.jpg
 
 baseurl: ""
 # the subpath of your site, e.g. /blog/
-url: "https://hexiang-hu.github.io"
+url: "https://zhiwenshao.github.io/"
 # the base hostname & protocol for your sit
 
 # Paginationœ
@@ -28,14 +28,14 @@ highlighter: rouge
 
 # Social media link for the site
 social:
-  twitter:    Hexiang_Hu
-  github:     Hexiang-Hu
-  facebook:   Hu.Hexiang
-  linkedin:   hexianghu
+  #twitter:    Hexiang_Hu
+  github:     ZhiwenShao
+  #facebook:   Hu.Hexiang
+  linkedin:   Zhiwen Shao
   rss:        /feed.xml
 
-google_analytics_token: "UA-60071442-1"
-google_tags_token: "GTM-K5ZTMW"
+#google_analytics_token: "UA-60071442-1"
+#google_tags_token: "GTM-K5ZTMW"
 
 
 # customized document resources
