--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
   #twitter:    Hexiang_Hu
   github:     ZhiwenShao
   #facebook:   Hu.Hexiang
-  linkedin:   Zhiwen Shao
+  linkedin:   zhiwen-shao-3586bb135
   rss:        /feed.xml
 
 #google_analytics_token: "UA-60071442-1"
