--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
 normal:
-  content:  "I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong> as a Research Assistant, advised by <a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>."
+  content:  "I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>."
