--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,230 +1,80 @@
-- title: 'Learning Answer Embedding for Visual Question Answering'
-  date:  'Feb. 2018'
-  imgurl: '/images/projects/2018/hexiang2018ansemb.png'
-  imgprop: 'frame'
+- title: 'Learning a Multi-Center Convolutional Network for Unconstrained Face Alignment'
+  date:  'July 2017'
+  imgurl: '/images/projects/2016/shao2017learning.jpg'
   selected: true
   authors:
-    - name: <strong>H. Hu</strong>
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Hengliang Zhu
       url:  ''
-      equal_contribution: true
-    - name: W.-L. Chao
-      url:  'http://www-scf.usc.edu/~weilunc/index.html'
-      equal_contribution: true
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-  publisher:  'CVPR 2018'
+    - name: Yangyang Hao
+      url:  ''
+    - name: Min  Wang
+      url:  ''
+    - name: Lizhuang Ma
+      url:  ''  
+  publisher:  'ICME 2017'
   status:   ''
-  place:    'in Salt Lake City, Utah'
-  desc: 'We propose a novel probabilistic model for visual question answering. <!--more--> The key idea is to infer two sets of embeddings: one for the image and the question jointly and the other for the answers. The learning objective is to learn the best parameterization of those embeddings such that the correct answer has higher likelihood among all possible answers.'
+  #place:   'in Las Vegas, Nevada'
+  #desc: 'We propose a method to integrate graphical models and deep neural networks into a joint framework with a sequential prediction approximation, modeled by recurrent neural network. This framework simultaneously predicts the underline structure of interactions between people and inferences the corresponding labels for individual and group.'
   tags:
-    - name: 'arXiv'
-      url:  ''
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/1608.00207'
     - name: 'pdf'
-      url:  ''
-- title: 'Cross-Dataset Adaptation for Visual Question Answering'
-  date:  'Feb. 2018'
-  imgurl: '/images/projects/2018/hexiang2018adaptation.png'
-  imgprop: 'frame'
+      url:  'pdfs/projects/2017/shao2017learning.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+
+- title: 'Learning Deep Representation from Coarse to Fine for Face Alignment'
+  date:  'July 2016'
+  imgurl: '/images/projects/2016/shao2016learning.jpg'
   selected: true
   authors:
-    - name: <strong>H. Hu</strong>
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Shouhong Ding
       url:  ''
-      equal_contribution: true
-    - name: W.-L. Chao
-      url:  'http://www-scf.usc.edu/~weilunc/index.html'
-      equal_contribution: true
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-  publisher:  'CVPR 2018'
+    - name: Yiru Zhao
+      url:  ''
+    - name: Qinchuan  Zhang
+      url:  ''
+    - name: Lizhuang Ma
+      url:  ''  
+  publisher:  'ICME 2016'
   status:   ''
-  place:    'in Salt Lake City, Utah'
-  desc: 'We investigate the problem of cross-dataset adaptation for visual question answering. <!--more--> Our goal is to train a Visual QA model on a source dataset  but apply it to another target one. Analogous to domain adaptation for visual recognition, this setting is appealing when the target dataset does not have a sufficient amount of labeled data to learn an "in-domain" model.'
+  #place:   'in Las Vegas, Nevada'
+  #desc: 'We propose a method to integrate graphical models and deep neural networks into a joint framework with a sequential prediction approximation, modeled by recurrent neural network. This framework simultaneously predicts the underline structure of interactions between people and inferences the corresponding labels for individual and group.'
   tags:
     - name: 'arXiv'
-      url:  ''
+      url:  'https://arxiv.org/abs/1608.00207'
     - name: 'pdf'
-      url:  ''
-- title: 'Compressed Video Action Recognition'
-  date:  'Jan. 2018'
-  imgurl: '/images/projects/2018/cywu2018coviar.png'
-  imgprop: 'frame'
+      url:  'pdfs/projects/2016/shao2016learning.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+
+- title: 'Face Alignment by Deep Convolutional Network with Adaptive Learning Rate'
+  date:  'Mar. 2016'
+  imgurl: '/images/projects/2016/shao2016face.jpg'
   selected: true
   authors:
-    - name: 'C.-Y. Chao'
-      url:  'http://www.cs.utexas.edu/~cywu/'
-    - name: 'M. Zaheer'
-      url:  'http://manzil.ml/'
-    - name: <strong>H. Hu</strong>
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Shouhong Ding
       url:  ''
-    - name: 'A. Smola'
-      url:  'https://alex.smola.org/'
-    - name: 'P. Krähenbühl'
-      url:  'http://www.philkr.net/'
-  publisher:  'CVPR 2018'
-  status:   '(Spotlight)'
-  place:    'in Salt Lake City, Utah'
-  desc: 'Training robust deep video representations has proven to be much more challenging than learning deep image representations and consequently hampered tasks like video action recognition. Motivated by the fact that the superfluous information can be reduced by up to two orders of magnitude with video compression techniques, in this work, we propose to train a deep network directly on the compressed video, devoid of redundancy'
-  tags:
-    - name: 'arXiv'
-      url:  'https://arxiv.org/abs/1712.00636'
-    - name: 'pdf'
+    - name: Hengliang Zhu
       url:  ''
-- title: 'Being Negative but Constructively: Lessons Learnt from Creating Better Visual Question Answering Datasets'
-  date:  'April. 2017'
-  imgurl: '/images/projects/2017/hexiang2017negative.png'
-  imgprop: 'frame'
-  selected: true
-  authors:
-    - name: W.-L. Chao
-      url:  'http://www-scf.usc.edu/~weilunc/index.html'
-      equal_contribution: true
-    - name: <strong>H. Hu</strong>
+    - name: Chengjie Wang
       url:  ''
-      equal_contribution: true
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-  publisher:  'NAACL-HLT 2018'
-  status:   '(Oral)'
-  place:    'in New Orleans, Louisiana'
-  desc: 'We show the design of the decoy answers has a significant impact on how and what the learning models learn from the datasets. In particular, the resulting learner can ignore the visual information, the question, or the both while still doing well on the task. <!--more--> Inspired by this, we propose automatic procedures of how to remedy such design deficiencies.'
-  tags:
-    - name: 'arXiv'
-      url:  ''
-    - name: 'pdf'
-      url:  '/pdf/hexiang2017negative.pdf'
-    - name: 'project'
-      url:  'http://www.teds.usc.edu/website_vqa'
-- title: 'LabelBank: Revisiting Global Perspectives for Semantic Segmentation'
-  date:  'March. 2017'
-  imgurl: '/images/projects/2017/hexiang2017labelbank.png'
-  imgprop: 'frame'
-  selected: false
-  authors:
-    - name: <strong>H. Hu</strong>
-      url:  ''
-      equal_contribution: true
-    - name: Z. Deng
-      url:  'http://www.sfu.ca/~zhiweid'
-      equal_contribution: true
-    - name: G.-T. Zhou
-      url:  'http://www.cs.sfu.ca/~gza11/personal/'
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-    - name: G. Mori
-      url:  'https://www.cs.sfu.ca/~mori/'
-  publisher:  'ArXiv 2017'
-  status:   '(Tech Report)'
-  place:    ''
-  desc: 'We show the ability of our framework to improve semantic segmentation performance in a variety of settings. We learn models for extracting a holistic LabelBank from visual cues, attributes, and/or textual descriptions. We demonstrate improvements in semantic segmentation accuracy on standard datasets across a range of state-of-the-art segmentation architectures and holistic inference approaches.'
-  tags:
-    - name: 'arXiv'
-      url:  'https://arxiv.org/abs/1703.09891'
-    - name: 'pdf'
-      url:  '/pdf/hexiang2017labelbank.pdf'
-- title: 'FastMask: Segment Multi-scale Object Candidates in One Shot'
-  date:  'Nov. 2016'
-  imgurl: '/images/projects/2016/hexiang2016fastmask.png'
-  imgprop: 'frame'
-  selected: true
-  authors:
-    - name: <strong>H. Hu</strong>
-      url:  ''
-      equal_contribution: true
-    - name: S. Lan
-      url:  ''
-      equal_contribution: true
-    - name: Y. Jiang
-      url:  ''
-    - name: Z. Cao
-      url:  ''
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-  publisher:  'CVPR 2017'
-  status:   '(Spotlight)'
-  place:    'in Honolulu, Hawaii'
-  desc: 'We present a novel segment proposal framework, namely FastMask, which takes advantage of the hierarchical structure in deep convolutional neural network to segment multi-scale objects in one shot. Through leveraging feature pyramid and sliding-window region attention, we made instance proposal not only fast but more accurate.'
-  tags:
-    - name: 'arXiv'
-      url:  'https://arxiv.org/abs/1612.08843'
-    - name: 'pdf'
-      url:  '/pdf/hexiang2016fastmask.pdf'
-    - name: 'code'
-      url:  'https://github.com/voidrank/FastMask'
-- title: 'Recalling Holistic Information for Semantic Segmentation'
-  date:  'Nov. 2016'
-  imgurl: '/images/projects/2016/hexiang2016holistic.png'
-  selected: false
-  authors:
-    - name: <strong>H. Hu</strong>
-      url:  ''
-      equal_contribution: true
-    - name: Z. Deng
-      url:  'http://www.sfu.ca/~zhiweid'
-      equal_contribution: true
-    - name: G.-T. Zhou
-      url:  'http://www.cs.sfu.ca/~gza11/personal/'
-    - name: F. Sha
-      url:  'http://www-bcf.usc.edu/~feisha/'
-    - name: G. Mori
-      url:  'https://www.cs.sfu.ca/~mori/'
-  publisher: 'ArXiv 2016'
-  status:    '(Tech. Report)'
-  place:     ''
-  desc: 'We advocate that high-recall holistic inference of image concepts provides valuable information for detailed pixel labeling. A two-stream neural network architecture is proposed to facilitate information flow from holistic information to local pixels.'
-  tags:
-    - name: 'arXiv'
-      url:  'https://arxiv.org/abs/1611.08061'
-    - name: 'pdf'
-      url:  'https://arxiv.org/pdf/1611.08061v1.pdf'
-    # - name: 'project'
-    #   url:  '/projects/holistic'
-- title: 'Learning Structured Inference Neural Networks with Label Relations'
-  date:  'Nov. 2015'
-  imgurl: '/images/projects/2015/hexiangh2015sinn.jpg'
-  selected: true
-  authors:
-    - name: <strong>H. Hu</strong>
-      url:  ''
-    - name: G.-T. Zhou
-      url:  'http://www.cs.sfu.ca/~gza11/personal/'
-    - name: Z. Deng
-      url:  'http://www.sfu.ca/~zhiweid'
-    - name: Z. Liao
-      url:  'http://web.engr.illinois.edu/~liao17/'
-    - name: G. Mori
-      url:  'https://www.cs.sfu.ca/~mori/'
-  publisher:  'CVPR 2016'
-  status:  ''
-  place:   'in Las Vegas, Nevada'
-  desc: 'We propose a generic structured model that leverages diverse label relations to improve image classification performance. It employs a novel stacked label prediction neural network, capturing both inter-level and intra-level label semantics. The design of this framework naurally extends to leverage partial observations in the label space to inference the rest label space.'
-  tags:
-    - name: 'arXiv'
-      url:  'http://arxiv.org/abs/1511.05616'
-    - name: 'pdf'
-      url:  '/pdf/hexiang2015sinn.pdf'
-    - name: 'project'
-      url:  '/projects/sinn'
-- title: 'Structure Inference Machines: Recurrent Neural Networks for Analyzing Relations in Group Activity Recognition'
-  date:  'Nov. 2015'
-  imgurl: '/images/projects/2015/zhiweid2015bprnn.jpg'
-  selected: false
-  authors:
-    - name: Z. Deng
-      url:  'http://www.sfu.ca/~zhiweid'
-    - name: A. Vahdat
-      url:  ''
-    - name: <strong>H. Hu</strong>
-      url:  ''
-    - name: G. Mori
-      url:  'https://www.cs.sfu.ca/~mori/'
-  publisher:  'CVPR 2016'
+    - name: Lizhuang Ma
+      url:  ''  
+  publisher:  'ICASSP 2016'
   status:   ''
-  place:   'in Las Vegas, Nevada'
-  desc: 'We propose a method to integrate graphical models and deep neural networks into a joint framework with a sequential prediction approximation, modeled by recurrent neural network. This framework simultaneously predicts the underline structure of interactions between people and inferences the corresponding labels for individual and group.'
+  #place:   'in Las Vegas, Nevada'
+  #desc: 'We propose a method to integrate graphical models and deep neural networks into a joint framework with a sequential prediction approximation, modeled by recurrent neural network. This framework simultaneously predicts the underline structure of interactions between people and inferences the corresponding labels for individual and group.'
   tags:
-    - name: 'arXiv'
-      url:  'http://arxiv.org/abs/1511.04196'
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/1608.00207'
     - name: 'pdf'
-      url:  'http://arxiv.org/pdf/1511.04196.pdf'
-    - name: 'site'
-      url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+      url:  'pdfs/projects/2016/shao2016face.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
