--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 - title: 'Learning a Multi-Center Convolutional Network for Unconstrained Face Alignment'
   date:  'July 2017'
-  imgurl: '/images/projects/2016/shao2017learning_img.pdf'
+  imgurl: '/images/projects/2016/shao2017learning.png'
   selected: true
   authors:
     - name: <strong>Zhiwen Shao</strong>
